fixed z-indexes to work more consistently

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -128,7 +128,7 @@
     left: 25%;
 }
 
-@for $i from -1 through 9 {
+@for $i from -9 through 9 {
     $class-name: z-#{$i};
     @if ($i < 0) {
         $class-name: z-neg-#{($i * -1)};
